syntax = "proto3";

package evm.native.transfers.v1;

message Events {
  repeated BlockReward block_rewards = 1;
  repeated Transaction transactions = 2;
}

message BlockReward {
  bytes miner = 1;
  string amount = 2; // uint256
}

message Transaction {
  bytes hash = 1;
  bytes from = 2;
  // Possible reasons for None 'to' address:
  // - withdrew unstaked asset
  // - claim rewards
  // - canceled unstaking
  optional bytes to = 3;
  uint64 nonce = 5;
  string gas_price = 6; // uint256
  uint64 gas_limit = 7;
  uint64 gas_used = 8;
  string value = 9; // uint256
  repeated Call calls = 10;
}

message Call {
  oneof call { Transfer transfer = 10; }
}

message Transfer {
  bytes from = 1;
  bytes to = 2;
  string amount = 3; // uint256
}
